# crosswire-editor

./: .gitignore  CMakeLists.txt  build.zig  build.zig.zon  flake.nix  imgui.ini
inc/: imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
levels/: .gitignore  test.cwl
src/: ImageSelector.cpp  ImageSelector.h  Inputs.h  Polygon.cpp  Polygons.h  Room.cpp  Room.h  Vec2.h  imconfig.h  main.cpp  serialize.h  terrain.h  util.cpp  util.h
